--- a/src/sass/layout/workshoppage/workshops.scss
+++ b/src/sass/layout/workshoppage/workshops.scss
@@ -104,15 +104,15 @@
         position: relative;
 
         .workshop-left {
-            padding: 30px;
+            padding: 70px 30px 30px 30px;
         }
 
         .workshop-right {
-            padding: 30px;
+            padding: 70px 30px 30px 30px;
         }
         
         h4 {
-            margin: 12vh 2vh 1vh 2vh;
+            margin: 10vh 2vh 1vh 2vh;
             font-size: 0.8rem;
             text-align: center;
             line-height: 1.5;
@@ -144,12 +144,11 @@
             
         }
         .workshop-image-right {
-            width: 10vh;
+            width: 15vh;
             position: absolute;
             top: 15%;
             left: 50%;
-            transform: translate(-50%, -50%);
-            
+            transform: translate(-50%, -50%);   
         }
       
     }
